# Climate-Change

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: data_collector.ipynb
data/data/: 20220715_quotes.csv  20220715_tweets.csv  20220715_users.csv  20220716_quotes.csv  20220716_tweets.csv  20220716_users.csv  20220717_tweets.csv  20220717_users.csv  20220718_users.csv  20220719_users.csv  20220720_users.csv  20220721_users.csv  20220722_quotes.csv  20220722_tweets.csv  20220722_users.csv  20220723_quotes.csv  20220723_tweets.csv  20220723_users.csv  20220724_quotes.csv  20220724_tweets.csv  20220724_users.csv  20220725_quotes.csv  20220725_users.csv  20220726_quotes.csv  20220726_tweets.csv  20220726_users.csv  20220727_quotes.csv  20220727_tweets.csv  20220727_users.csv  20220728_quotes.csv  20220728_users.csv  20220729_quotes.csv  20220729_tweets.csv  20220729_users.csv  20220730_quotes.csv  20220730_tweets.csv  20220730_users.csv  20220731_quotes.csv  20220731_tweets.csv  20220731_users.csv  (+891 more)
data/sample_data/: first_500_sample_scored.csv  quotes.csv  (+10 more)
notebooks/: Untitled.ipynb  clean_data.ipynb  corran_overall.ipynb  data_collector.ipynb  final_scores.feather  first_500_sample_scored.csv  gold_standard_scores.ipynb  initial_stats.ipynb  liwc_2.csv  load_data.ipynb  regression_model.ipynb  replies.csv  sample_quotes.feather  sample_tweets_final_version.feather  sample_tweets_liwc.csv  sample_tweets_niloo.csv  sample_tweets_niloo_first3weeks.csv  stop_words.txt  total_tweets_scored.csv  tweets.csv  update_dataframe.ipynb
scripts/: scrape.py
(+379 files in other folders)
