[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "climate_change_nc"
version = "0.0.1"
authors = [
  { name="Niloofar Rahmati", email="nil.rahmait@gmail.com" },
]
description = ""
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nilo0/Climate-Change"
"Bug Tracker" = "https://github.com/nilo0/Climate-Change/issues"
